# music-lyric-model-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  README.zh-Hans.md  README.zh-Hant.md  buf.gen.yml
include/: music_lyric_model.h
private/: pb.h
private/bridge/common/: agent.gen.h  line.gen.h  meta.gen.h  part.gen.h  time.gen.h  timing.gen.h  unknown.gen.h  word.gen.h
private/bridge/parsed/: info.gen.h  language.gen.h  line.gen.h
private/bridge/storage/: line.gen.h  lyric.gen.h
private/pb/common/: agent.pb.cc  part.pb.h  time.pb.h  timing.pb.cc  timing.pb.h  unknown.pb.cc  word.pb.h
private/pb/parsed/: info.pb.h
private/pb/storage/: line.pb.h  lyric.pb.h
script/: format-code.py  generate-proto-version.py
script/proto-gen/: bridge.go  domain.go  main.go  names.go
src/: info.cpp  info.h  music_lyric_model.h  version.h
src/agent/: agent.cpp  agent.h
src/common/: agent.cpp  agent.h  common.h  line.cpp  line.h  meta.cpp  meta.h  part.cpp  part.h  proto.h  time.cpp  time.h  unknown.cpp  unknown.h  word.cpp  word.h
src/language/: language.cpp  language.h
src/line/: annotation.cpp  annotation.h  content.cpp  content.h
src/meta/: meta.cpp  meta.h
src/model/common/: agent.gen.h  line.gen.h  meta.gen.h  part.gen.h  time.gen.h  timing.gen.h  unknown.gen.h  word.gen.h
src/model/parsed/: info.gen.h  language.gen.h  line.gen.h
src/model/storage/: line.gen.h  lyric.gen.h
src/parsed/: info.cpp  info.h  info_json.cpp  language.cpp  language.h  line.cpp  line.h  parsed.h  proto.h
src/runtime/: agent.cpp  agent.h  info.cpp  info.h  language.cpp  language.h  line.cpp  line.h  meta.cpp  meta.h  part.cpp  part.h  proto.h  runtime.h  word.cpp  word.h
src/storage/: agent.cpp  agent.h  line.cpp  line.h  lyric.cpp  lyric.h  lyric_json.cpp  meta.cpp  meta.h  part.cpp  part.h  proto.h  storage.h  word.cpp  word.h
src/word/: annotation.cpp  annotation.h  content.cpp  content.h
test/: info.test.cpp
test/agent/: agent.test.cpp
test/common/: agent.test.cpp  meta.test.cpp  time.test.cpp  word.test.cpp
test/language/: language.test.cpp
test/line/: annotation.test.cpp  content.test.cpp
test/meta/: meta.test.cpp
test/parsed/: annotation.test.cpp  info.test.cpp  language.test.cpp  line.test.cpp
test/runtime/: agent.test.cpp  annotation.test.cpp  info.test.cpp  language.test.cpp  line.test.cpp  meta.test.cpp  part.test.cpp  word.test.cpp
test/storage/: agent.test.cpp  line.test.cpp  lyric.test.cpp  meta.test.cpp  part.test.cpp  word.test.cpp
test/word/: annotation.test.cpp  content.test.cpp
